solid/solid/backends/hal/halstorageaccess.cpp
@@ -19,6 +19,9 @@
 
 #include "halstorageaccess.h"
 
+#include "halfstabhandling.h"
+
+#include <QtCore/QLocale>
 #include <QtCore/QDebug>
 #include <QtCore/QProcess>
 #include <QtDBus/QDBusConnection>
@@ -28,8 +31,6 @@
 #include <QtGui/QWidget>
 
 #include <unistd.h>
-
-#include "halfstabhandling.h"
 
 using namespace Solid::Backends::Hal;
 
@@ -257,6 +258,38 @@ bool StorageAccess::callHalVolumeMount()
 
     if (halOptions.contains("uid=")) {
         options << "uid="+QString::number(::getuid());
+    }
+    //respect windows-enforced charsets for fat
+    if ( m_device->property("volume.fstype").toString()=="vfat" && halOptions.contains("codepage=") ) {
+        options << "iocharset=utf8";
+        switch (QLocale::system().language()) {
+        case QLocale::Russian:
+        case QLocale::Ukrainian:
+            options << "codepage=1251";
+            break;
+        case QLocale::Hebrew:
+            options << "codepage=1255";
+            break;
+        case QLocale::Turkish:
+            options << "codepage=1254";
+        case QLocale::Greek:
+            options << "codepage=1253";
+        case QLocale::Arabic:
+            options << "codepage=1256";
+        case QLocale::German:
+        case QLocale::Italian:
+        case QLocale::Spanish:
+        case QLocale::Portuguese:
+        case QLocale::French:
+        case QLocale::Dutch:
+        case QLocale::Danish:
+        case QLocale::Swedish:
+        case QLocale::Norwegian:
+        case QLocale::Icelandic:
+            options << "codepage=1255";
+        default:
+            options.removeLast();
+        }
     }
 
     msg << "" << "" << options;
